arma-rs/tests/derive/fail_union.stderr
error: expected `struct`
 --> tests/derive/fail_union.rs:4:5
  |
4 | pub union DeriveTest {
  |     ^^^^^
